--- a/success.html
+++ b/success.html
@@ -15,7 +15,7 @@
   <body>
     <div class="jumbotron jumbotron-fluid">
       <div class="container">
-        <h1 class="display-4">Success!</h1>
+        <h1 class="display-4">Brilliant!</h1>
         <p class="lead">
          Thanks for subscribing to my Newsletter!
         </p>
